Fix missing image bug, Split gadgets and weapon folders

--- a/BrawlStreamStatsHelper/BrawlStreamStatsHelper.csproj
+++ b/BrawlStreamStatsHelper/BrawlStreamStatsHelper.csproj
@@ -37,6 +37,9 @@
     <None Update="Assets\Legends\brynn.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\Legends\NoImage.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\Weapons\axe.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -59,6 +62,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Assets\Weapons\katar.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\Weapons\NoImage.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Assets\Weapons\orb.png">
